--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -13,5 +13,6 @@ jobs:
       - uses: actions/checkout@v3
       - name: install packages
         run: make install
-      - name: format
-        run: make format
+
+      - name: lint
+        run: make lint
